--- a/P1.ipynb
+++ b/P1.ipynb
@@ -583,7 +583,8 @@
     "plt.yticks(tick_marks, ['Non-Solar Farm', 'Solar Farm'])\n",
     "plt.xlabel('Predicted Label')\n",
     "plt.ylabel('True Label')\n",
-    "plt.show()"
+    "plt.show()\n"
+    "#This confusion matrix of then model I saved had better Precision and F1 score. The matrix represented below does not show the best model"
    ]
   },
   {
